Adicionando o Script MDL: para inserir massa de dados stubs de testes!
