# src/main/java/br/gov/acmecorp/modules/users/arch/clean/application/controllers/AuthController.java
@@ -9,6 +9,7 @@ import br.gov.acmecorp.modules.users.arch.clean.application.controllers.api.Auth
 import br.gov.acmecorp.modules.users.arch.clean.infrastructure.entity.api.*;
 import br.gov.acmecorp.modules.users.arch.clean.infrastructure.mapper.login.LoginMapper;
 import br.gov.acmecorp.modules.users.arch.clean.infrastructure.mapper.login.LoginSourceDestinationMapper;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -29,12 +30,20 @@ public class AuthController implements AuthApi {
     private final TokenService tokenService;
     private final LoginMapper loginMapper;
 
+
+    @Value("${spring.profiles.active}")
+    private String springProfilesActive;
+
     @PostMapping(value="/login", consumes = {"application/json"})
     public ResponseEntity<LoginResponseDTO> login(@RequestBody LoginRequestDTO body){
         UsersEntity user = this.repository.findByEmail(body.getEmail()).orElseThrow(() -> new RuntimeException("Usuário não encontrado!"));
         if(passwordEncoder.matches(body.getPassword(), user.getPassword())) {
             String token = this.tokenService.generateToken(user);
-            return ResponseEntity.ok(loginMapper.toDTO(user).token(token));
+            LoginResponseDTO loginResponseDTO = loginMapper.toDTO(user)
+                    .profilesActive(springProfilesActive)
+                    .token(token);
+
+            return ResponseEntity.ok(loginResponseDTO);
         }
         return ResponseEntity.badRequest().build();
     }
@@ -51,7 +60,7 @@ public class AuthController implements AuthApi {
             newUser.setEmail(body.getEmail());
             newUser.setName(body.getName());
             newUser.setLastName(body.getLastName());
-            newUser.setRules(List.of(Rules.PADRAO.getValue()));
+            newUser.setRules(List.of(Rules.ROLE_USER.getValue()));
             newUser.setStatus(UserStatus.ACTIVE.getValue());
             this.repository.save(newUser);
             opUser = this.repository.findByEmail(body.getEmail());
